--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio JDR 2025-2026</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
@@ -36,9 +39,12 @@
     <div class="container">
       <div class="row">
         <div class="col-sm align-self-center">
-          <div class="align-self-center">
+          <div class="">
             <h1 class="text-white">Ik ontwerp applicaties voor het web<span style="color: #00C2FF">.</span></h1>
-            <p class="text-white">Ik ben een junior front-end ontwikkelaar gevestigd in België die graag creatieve en aantrekkelijke ontwerpervaringen voor het web creëert.</p>
+            <p class="text-white pt-3">Ik ben een junior front-end ontwikkelaar gevestigd in België die graag creatieve en aantrekkelijke ontwerp-ervaringen voor het web creëert.</p>
+            <a href="#">
+              <h6 class="button" data-value="LEES MEER">LEES MEER</h6>
+            </a>
           </div>
         </div>
         <div class="col">
@@ -48,6 +54,7 @@
     </div>
   </section>
   
+  <script src="script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
