feature: about page

--- a/index.html
+++ b/index.html
@@ -54,6 +54,18 @@
     </div>
   </section>
   
+  <section id="about">
+    <div class="container">
+      <h2 class="text-white text-center pt-5 headtitle">ABOUT <span>ME</span></h2>
+      <div class="row">
+          <div class="box text-white rounded-2 p-5 m-5">
+            <p>Hallo! mijn naam is Joris en ik ben een enthousiaste front-end developer met een passie voor grafisch design en webontwikkeling.</p>
+            <p>Of het nu gaat om het ontwerpen van een verbluffende website of het perfectioneren van de gebruikerservaring, ik zet me volledig in voor elk project waar ik aan werk.</p>
+            <p>Ik kijk ernaar uit om samen te werken en prachtige dingen te creëren!</p>
+        </div>
+      </div>
+  </section>
+
   <script src="script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
