--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #050407;">
     <div class="container">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand mt-2" href="#">
         <img src="assets/logo.png" alt="Logo"/>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,7 +48,9 @@
           </div>
         </div>
         <div class="col">
-          <img class="profielfoto" src="./assets/profielfoto.jpg" alt="profielfoto"/>
+          <div class="image-container">
+            <img class="profielfoto" src="./assets/profielfoto.jpg" alt="profielfoto"/>
+          </div>
         </div>
       </div>
     </div>
