--- a/index.html
+++ b/index.html
@@ -70,25 +70,25 @@
         <div class="row g-3">
             <!-- First row: 4 items -->
             <div class="col-md-3 col-sm-6">
-              <div class="box rounded p-5">
+              <div class="cards rounded p-5">
                 <i class="d-flex justify-content-center fa-brands fa-html5"></i>
                 <p class="text-center text-white mt-2">HTML</p>
               </div>
             </div>
             <div class="col-md-3 col-sm-6">
-              <div class="box rounded p-5">
+              <div class="cards rounded p-5">
                 <i class="d-flex justify-content-center fa-brands fa-css3-alt"></i>
                 <p class="text-center text-white mt-2">CSS</p>
               </div>
             </div>
             <div class="col-md-3 col-sm-6">
-              <div class="box rounded p-5">
+              <div class="cards rounded p-5">
                 <i class="d-flex justify-content-center fa-brands fa-js"></i>
                 <p class="text-center text-white mt-2">JavaScript</p>
               </div>
             </div>
             <div class="col-md-3 col-sm-6">
-              <div class="box rounded p-5">
+              <div class="cards rounded p-5">
                 <i class="d-flex justify-content-center fa-brands fa-react"></i>
                 <p class="text-center text-white mt-2">React</p>
               </div>
@@ -96,32 +96,40 @@
 
             <!-- Second row: 3 items -->
             <div class="col-md-4 col-sm-6">
-              <div class="box rounded p-5">
-                <i class="d-flex justify-content-center fa-brands  fa-html5"></i>
+              <div class="cards rounded p-5">
+                <i class="d-flex justify-content-center fa-brands">
+                  <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0,0,256,256">
+                    <g fill="#ffffff" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(10.66667,10.66667)"><path d="M23.395,7.081c-0.488,-0.207 -1.053,-0.002 -1.29,0.472c-0.224,0.448 -0.523,0.723 -0.914,0.838c-0.612,0.183 -1.343,-0.052 -1.685,-0.253c-0.451,-0.265 -0.974,-0.667 -1.527,-1.092c-1.765,-1.358 -3.961,-3.046 -6.979,-3.046c-2.414,0 -3.654,1.239 -5.707,3.293c-0.391,0.391 -0.394,1.027 -0.003,1.417c0.38,0.382 0.99,0.394 1.382,0.03c0.01,-0.009 0.02,-0.019 0.03,-0.028c0.552,-0.426 4.03,-0.012 5.55,1.196c2.259,1.795 3.89,3.092 5.748,3.092c2.659,0 4.879,-1.741 5.94,-4.658c0.181,-0.498 -0.058,-1.051 -0.545,-1.261zM18.395,14.081c-0.488,-0.207 -1.053,-0.002 -1.29,0.472c-0.224,0.448 -0.523,0.723 -0.914,0.838c-0.612,0.18 -1.343,-0.052 -1.685,-0.253c-0.451,-0.265 -0.974,-0.667 -1.527,-1.092c-1.765,-1.358 -3.961,-3.046 -6.979,-3.046c-2.414,0 -3.654,1.239 -5.707,3.293c-0.391,0.391 -0.394,1.027 -0.003,1.417c0.38,0.382 0.991,0.395 1.383,0.03c0.01,-0.009 0.02,-0.019 0.03,-0.028c0.551,-0.426 4.031,-0.012 5.55,1.196c2.258,1.795 3.889,3.092 5.747,3.092c2.659,0 4.879,-1.741 5.94,-4.658c0.181,-0.498 -0.058,-1.051 -0.545,-1.261z"></path></g></g>
+                    </svg>
+                </i>
                 <p class="text-center text-white mt-2">Tailwind css</p>
               </div>
             </div>
             <div class="col-md-4 col-sm-6">
-              <div class="box rounded p-5">
-                <i class="d-flex justify-content-center fa-brands d fa-css3-alt"></i>
+              <div class="cards rounded p-5">
+                <i class="d-flex justify-content-center fa-brands">
+                  <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0,0,256,256">
+                    <g fill="#ffffff" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(10.66667,10.66667)"><path d="M8.56,4.94l-6.02,10.4l3.005,-14.193c0.097,-0.457 0.712,-0.544 0.931,-0.131zM9.67,7.02l1.2,2.25l-5.53,5.23zM14.16,6.15l-1.79,1.7l-1.52,-2.86l0.973,-1.674c0.198,-0.341 0.694,-0.329 0.876,0.021zM21.13,18.74l-8.8,5.12c-0.15,0.1 -0.33,0.14 -0.5,0.14c-0.17,0 -0.35,-0.04 -0.5,-0.13l-8.05,-4.65l15.367,-14.563c0.291,-0.276 0.771,-0.114 0.837,0.281l2.126,12.772c0.07,0.41 -0.12,0.82 -0.48,1.03z"></path></g></g>
+                  </svg>
+                </i>
                 <p class="text-center text-white mt-2">Firebase</p>
               </div>
             </div>
             <div class="col-md-4 col-sm-6">
-              <div class="box rounded p-5">
+              <div class="cards rounded p-5">
                 <i class="d-flex justify-content-center fa-brands  fa-figma"></i>
                 <p class="text-center text-white mt-2">Figma</p>
               </div>
             </div>
             <!-- Third row: 2 items -->
             <div class="col-md-6 col-sm-6">
-              <div class="box rounded p-5">
+              <div class="cards rounded p-5">
                 <i class="d-flex justify-content-center fa-brands fa-bootstrap"></i>
                 <p class="text-center text-white mt-2">Bootstrap</p>
               </div>
             </div><div class="col-md-6 col-sm-6">
-              <div class="box rounded p-5">
-                <i class="d-flex justify-content-center fa-brands fa-codepen"></i>
+              <div class="cards rounded p-5">
+                <i class="d-flex justify-content-center fa-brands fa-github"></i>
                 <p class="text-center text-white mt-2">Many more...</p>
               </div>
             </div>
